--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Trimineman</title>
+  <meta charset="UTF-8">
+  <title>Trimineman!<title>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hi!</h1>
+  <footer>yeet</footer>
 </body>
 </html>
