--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Trimineman!<title>
 </head>
 <body>
-  <h1>Hi!</h1>
-  <footer>yeet</footer>
+  <center>
+	 <h1>Hi!</h1>
+  </center>
 </body>
 </html>
